--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                                 <a class="nav-link " href="#">Campaign</a>
                               </li>
                                <li class="nav-item">
-                                <a class="nav-link " href="#">Media</a>
+                                <a class="nav-link " href="gallery.html">Media</a>
                               </li>
                                <li class="nav-item">
-                                <a class="nav-link " href="#">Contact Us</a>
+                                <a class="nav-link " href="contact_us.html">Contact Us</a>
                               </li>
                             </ul>
                           </div>
