--- a/gallery.html
+++ b/gallery.html
@@ -62,7 +62,9 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-3 col-lg-3 col-xl-3 logo-dv">
+                        <a href="index.html">
                         <img src="assets/images/logo.png" alt="">
+                        </a>
                     </div>
                     <div class="col-md-9 col-lg-9 col-xl-9 text-right">
                         <span class="mr-3"><a href="tel:+919411109464"><i class="fas fa-phone"></i>
@@ -81,9 +83,10 @@
                 <div class="row">
                     <div class="col-lg-9 nav-div">
                        <nav class="navbar navbar-expand-lg navbar-light     ">
-
+                        <a href="index.html">
                         <img src="assets/images/logo.png" width="50px" height="50px" alt="logo_mobile" class="hideForWeb">
-                    
+                        </a>
+
                           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                           </button>
@@ -214,7 +217,7 @@
     <div class="container">
         <div class="footer-top row">
             <div class="col-md-4 foot-logo">
-                    <img src="assets/images/logo.png" alt="">
+                <a href="index.html"><img src="assets/images/logo.png" alt=""></a>
             </div>
             <div class="col-md-8 foot-addr">
                 <ul>
