--- a/contact_us.html
+++ b/contact_us.html
@@ -118,7 +118,7 @@
 
 
                 <div style="padding:20px" class="col-sm-7">
-                    <h2 >Contact Form</h2> <br>
+                    <h2 >Contact Us</h2> <br>
                     <div class="row cont-row">
                         <div  class="col-sm-3"><label>Enter Name </label><span>:</span></div>
                         <div class="col-sm-8"><input type="text" placeholder="Enter Name" name="name" class="form-control input-sm"  ></div>
