--- a/gallery.html
+++ b/gallery.html
@@ -97,8 +97,13 @@
                               <li class="nav-item">
                                 <a class="nav-link" href="index.html">Home </a>
                               </li>
-                              <li class="nav-item">
-                                <a class="nav-link" href="#">Our Task</a>
+                              <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Our Task</a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">Task 1</a>
+                                    <a class="dropdown-item" href="#">Task 2</a>
+                                    <a class="dropdown-item" href="#">Task 3</a>
+                                </div>
                               </li>
                               <li class="nav-item">
                                 <a class="nav-link " href="#">Campaign</a>
