--- a/index.html
+++ b/index.html
@@ -46,15 +46,18 @@
                           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                           </button>
-                         
-
                           <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                               <li class="nav-item">
                                 <a class="nav-link" href="#">Home </a>
                               </li>
-                              <li class="nav-item">
-                                <a class="nav-link" href="#">Our Task</a>
+                              <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Our Task</a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">Task 1</a>
+                                    <a class="dropdown-item" href="#">Task 2</a>
+                                    <a class="dropdown-item" href="#">Task 3</a>
+                                </div>
                               </li>
                               <li class="nav-item">
                                 <a class="nav-link " href="#">Campaign</a>
