--- a/gallery.html
+++ b/gallery.html
@@ -61,12 +61,13 @@
         <div class="container-fluid header-top hideForMobile">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-3 col-lg-3 col-xl-3 logo-dv">
+                    <div class="col-md-6 col-lg-6 col-xl-6 logo-dv d-flex align-items-center">
                         <a href="index.html">
                         <img src="assets/images/logo.png" alt="">
                         </a>
+                        <p class="ml-3 LogoTagline">सेवा संकल्प फाउंडेशन धारणी</p>
                     </div>
-                    <div class="col-md-9 col-lg-9 col-xl-9 text-right">
+                    <div class="col-md-6 col-lg-6 col-xl-6 text-right">
                         <span class="mr-3"><a href="tel:+919411109464"><i class="fas fa-phone"></i>
                         +919411109464</a></span>
                     <span><a href="mailto:sewasankalpfoundation.uk@gmail.com"><i class="fas fa-envelope"></i>
@@ -83,9 +84,10 @@
                 <div class="row">
                     <div class="col-lg-9 nav-div">
                        <nav class="navbar navbar-expand-lg navbar-light     ">
-                        <a href="index.html">
-                        <img src="assets/images/logo.png" width="50px" height="50px" alt="logo_mobile" class="hideForWeb">
-                        </a>
+                        <div class="d-flex align-items-center">
+                            <img src="assets/images/logo.png" width="50px" height="50px" alt="logo_mobile" class="hideForWeb">
+                            <p class="ml-2 LogoTagline hideForWeb">सेवा संकल्प फाउंडेशन धारणी</p>
+                        </div>
 
                           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
