--- a/index.html
+++ b/index.html
@@ -57,15 +57,19 @@
                                 <a class="nav-link" href="#">Home </a>
                               </li>
                               <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Our Task</a>
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Objective</a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#">Task 1</a>
-                                    <a class="dropdown-item" href="#">Task 2</a>
-                                    <a class="dropdown-item" href="#">Task 3</a>
+                                    <a class="dropdown-item" href="#">Education</a>
+                                    <a class="dropdown-item" href="#">Health</a>
+                                    <a class="dropdown-item" href="#">Environment</a>
                                 </div>
                               </li>
-                              <li class="nav-item">
-                                <a class="nav-link " href="#">Campaign</a>
+                              <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Campaign</a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">Recent</a>
+                                    <a class="dropdown-item" href="#">Upcoming</a>
+                                </div>
                               </li>
                                <li class="nav-item">
                                 <a class="nav-link " href="gallery.html">Media</a>
