--- a/gallery.html
+++ b/gallery.html
@@ -100,15 +100,19 @@
                                 <a class="nav-link" href="index.html">Home </a>
                               </li>
                               <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Our Task</a>
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Objective</a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#">Task 1</a>
-                                    <a class="dropdown-item" href="#">Task 2</a>
-                                    <a class="dropdown-item" href="#">Task 3</a>
+                                    <a class="dropdown-item" href="#">Education</a>
+                                    <a class="dropdown-item" href="#">Health</a>
+                                    <a class="dropdown-item" href="#">Environment</a>
                                 </div>
                               </li>
-                              <li class="nav-item">
-                                <a class="nav-link " href="#">Campaign</a>
+                              <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Campaign</a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">Recent</a>
+                                    <a class="dropdown-item" href="#">Upcoming</a>
+                                </div>
                               </li>
                                <li class="nav-item">
                                 <a class="nav-link " href="#">Media</a>
@@ -157,12 +161,12 @@
             <!-- Gallery items -->
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="img-hover-zoom">
-                    <img src="assets/images/home/DSC_1373.jpg" class="img-fluid gallery-img" alt="Gallery Image 1" data-index="0">
+                    <img src="assets/images/home/DSC_1150.jpg" class="img-fluid gallery-img" alt="Gallery Image 1" data-index="0">
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="img-hover-zoom">
-                    <img src="assets/images/home/DSC_1179.jpg" class="img-fluid gallery-img" alt="Gallery Image 2" data-index="1">
+                    <img src="assets/images/home/DSC_1192.jpg" class="img-fluid gallery-img" alt="Gallery Image 2" data-index="1">
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 mb-4">
