--- a/education.html
+++ b/education.html
@@ -18,82 +18,88 @@
 <body>
     <!-- ******************** Header Starts Here ******************* -->
     <header>
-        <div class="container-fluid header-top">
+        <div class="container-fluid header-top hideForMobile">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-3 logo-dv">
-                        <img src="assets/images/logo.jpg" alt="">
+                <div class="row align-items-center">
+                    <div class="col-md-6 col-lg-6 col-xl-6 logo-dv d-flex align-items-center">
+                        <img src="assets/images/logo.png" alt="">
+                        <p class="ml-3 LogoTagline">सेवा संकल्प फाउंडेशन धारणी</p>
                     </div>
-                    <div class="col-md-9 bonto">
-                        <ul>
-                            <li><div class="donta-btn">
-                                <p>Please make your</p>
-                                <strong>Dontatin</strong>
-                            </div></li>
-                            <li><div class="voltterr-btn">
-                                <p>Time to Becom a</p>
-                                <strong>Volunteer</strong>
-                            </div></li>
-                        </ul>
+
+                    <div class="col-md-6 col-lg-6 col-xl-6 text-right">
+                        <span class="mr-3"><a href="tel:+919411109464"><i class="fas fa-phone"></i>
+                                +919411109464</a></span>
+                        <span><a href="mailto:sewasankalpfoundation.uk@gmail.com"><i class="fas fa-envelope"></i>
+                                sewasankalpfoundation.uk@gmail.com</a></span>
                     </div>
                 </div>
             </div>
         </div>
 
-     <!-- ******************** Nav Starts Here ******************* -->
+        <!-- ******************** Nav Starts Here ******************* -->
 
         <div id="menu-jk" class="headwe-nav container-fluid">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-9 nav-div">
-                       <nav class="navbar navbar-expand-lg navbar-light     ">
-                          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                          </button>
-                         
+                        <nav class="navbar navbar-expand-lg navbar-light">
 
-                          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                              <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Home </a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link" href="about_us.html">About Us</a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link " href="causes.html"  >Causes</a>
-                              </li>
-                               <li class="nav-item">
-                                <a class="nav-link " href="events.html"  >Events</a>
-                              </li>
-                               <li class="nav-item">
-                                <a class="nav-link " href="blog.html" >Blog</a>
-                              </li>
-                               <li class="nav-item">
-                                <a class="nav-link " href="contact_us.html" >Contact US</a>
-                              </li>
-                            </ul>
-                          
-                          </div>
+                            <div class="d-flex align-items-center">
+                                <img src="assets/images/logo.png" width="50px" height="50px" alt="logo_mobile"
+                                    class="hideForWeb">
+                                <p class="ml-2 LogoTagline hideForWeb">सेवा संकल्प फाउंडेशन धारणी</p>
+                            </div>
+
+                            <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Home </a>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                            data-toggle="dropdown" aria-haspopup="true"
+                                            aria-expanded="false">Objective</a>
+                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <a class="dropdown-item" href="#">Education</a>
+                                            <a class="dropdown-item" href="#">Health</a>
+                                            <a class="dropdown-item" href="education.html">Environment</a>
+                                        </div>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                            data-toggle="dropdown" aria-haspopup="true"
+                                            aria-expanded="false">Campaign</a>
+                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <a class="dropdown-item" href="#">Recent</a>
+                                            <a class="dropdown-item" href="#">Upcoming</a>
+                                        </div>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link " href="gallery.html">Media</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link " href="contact_us.html">Contact Us</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </nav>
-                                            </div>
+                    </div>
+
                     <div class="col-lg-3 d-none d-lg-block social-div">
                         <ul class="ulright">
-                            <li>
-                                <i class="fab fa-facebook-square"></i>
-                            </li>
-                            <li>
-                                <i class="fab fa-twitter-square"></i>
-                            </li>
-                            <li>
-                                <i class="fab fa-instagram"></i>
-                            </li>
-                            <li>
-                                <i class="fab fa-linkedin"></i>
-                            </li>
-                            <li>
-                                <i class="fab fa-pinterest-square"></i>
-                            </li>
+                            <li><a href="https://www.facebook.com/profile.php?id=61560728081587&amp;mibextid=ZbWKwL"
+                                    target="_blank"><i class=" fab fa-facebook"></i></a></li>
+                            <li><a href="https://www.instagram.com/sewasankalpfoundation?igsh=cTJiZmF5NTNieWM2"
+                                    target="_blank"><i class=" fab fa-instagram"></i></a></li>
+                            <li><a href="https://youtube.com/@sevasankalpfoundation?si=xjKxzxo4c0XPl7K4"
+                                    target="_blank"><i class=" fab fa-youtube"></i></a></li>
+                            <li><a href="#" target=""><i class=" fab fa-twitter"></i></a></li>
+                            <li><a href="#" target=""><i class=" fab fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -106,10 +112,11 @@
     <div class="page-nav no-margin row">
         <div class="container">
             <div class="row">
-                <h2>Our Events</h2>
+                <h2>Education</h2>
                 <ul>
                     <li> <a href="#"><i class="fas fa-home"></i> Home</a></li>
-                    <li><i class="fas fa-angle-double-right"></i> Events</li>
+                    <li><i class="fas fa-angle-double-right"></i> Objective</li>
+                    <li><i class="fas fa-angle-double-right"></i> Education</li>
                 </ul>
             </div>
         </div>
@@ -123,28 +130,22 @@
 
     <section class="upcomming container-flid">
         <div class="container">
-            <div class="session-title row">
-                <p>KNOW AND COME TO JOIN OUR</p>
-                <h2>UPCOMING EVENTS</h2>
-            </div>
+            <!-- <div class="session-title row">
+                <h2>Education</h2>
+            </div> -->
             <div class="events-row row">
                 <div class="col-md-4">
                     <div class="event-card">
                         <img src="assets/images/event/e1.jpg" alt="">
                         <div class="event-detail">
-                            <h4>Fund Raising Event</h4>
-                            <p>Estibulum at maximus neque. Etiam interdum fermentum dolor, eget placerat lorem.</p>
-
-                            <h6>25 <sup>Th</sup> Mar 2020</h6>
+                            <h4></h4>
+                            <p></p>
+                            <h6>07 <sup>Th</sup> June 2024</h6>
                         </div>
                         <div class="plac-dat row no-margin">
-                            <div class="col-7 colplac colplacll">
+                            <div class="col-12 colplac colplacll">
                                 <strong>PLACE:</strong>
-                                <p>EASTER COAST HOTEL, CA</p>
-                            </div>
-                            <div class="col-5 colplac">
-                                 <strong>TICKET:</strong>
-                                <p>FREE OF COST</p>
+                                <p>Sahastradhara Road</p>
                             </div>
                         </div>
                     </div>
